# erp321-tool

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: release.yml
erp321_tool/: browser.py  constants.py  export_from_erp321.py  gui.py  import_to_erp321.py  utils.py
examples/: 【推单】09.13零元生活(KTT)x下厨房-订单-0913100042.xlsx  【推单】9.15-蜜淘-下厨房扑扑虾滑 5盒_组-11.xlsx  【推单】9.18下厨房代发qtools.xls  【推单】BM【跟团号239-240】09.16930开学早餐来口透油皮的有机黑猪肉小笼包【下厨房-订单-0916100200.xlsx  【推单】qtools-9.18下厨房代发 - 副本.xlsx  【推单】qtools-9.18下厨房代发.xlsx  【推单】童品会-下厨房订单9-15.xlsx  【推单】童品会-赠品订单补发 2023-09-15.xlsx
examples/工具设置/: 字段匹配 - 填写说明.xlsx  字段匹配.xlsx  渠道商品价格.xlsx
